--- a/src/app/shared/components/action-bar/action-bar.component.html
+++ b/src/app/shared/components/action-bar/action-bar.component.html
@@ -6,4 +6,8 @@
   <div class="title-container">
     <ng-content select="[title]"></ng-content>
   </div>
+
+  <div class="action-container">
+    <ng-content select="[close]"></ng-content>
+  </div>
 </div>
