toast / estilo excluir imagem

--- a/src/app/pages/produto/produto-cadastro/produto-cadastro.component.html
+++ b/src/app/pages/produto/produto-cadastro/produto-cadastro.component.html
@@ -89,7 +89,8 @@
 
         <div class="remove-image-btn" (click)="removeImage()">
           <mat-icon
-            class="consulta-delete-icon"
+            class="icon"
+            style="--icon-color: var(--color-delete)"
             aria-label="Editar"
             fontIcon="delete"
           ></mat-icon>
